@@ -497,4 +497,8 @@ export class CesiumMap extends map.MapControl
 	layerAddGeometry(geometryLayer: any, geom: any): void;
 	layerRemoveGeometry(geometryLayer: any, geom: any): void;
 	layerClearGeometries(geometryLayer: any): void;*/
+	getViewer()
+	{
+		return this.viewer;
+	}
 }
