@@ -4,17 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>AVIRead - Leaflet Map</title>
+		<title>AVIRead - QR Reader</title>
 		<link rel="manifest" href="manifest.json" />
 		<meta name="theme-color" content="#181c25" />
 		<script type="text/javascript" src="/js/html5-qrcode/html5-qrcode.min.js"></script>
-		<script type="text/javascript" src="/js/@zxing/library/umd/index.min.js"></script>
-		<script type="module" src="mod/imageview.js"></script>
+		<script type="module" src="mod/qrreader.js"></script>
 	</head>
 	<body style="margin: 0px;">
-		<div id="content" style="width: 100%; height: 100vh;"></div>
-		<input type="button" id="btnJPG" value="Export to JPG"/>
-		<input type="button" id="btnWEBP" value="Export to WEBP"/>
-		<input type="button" id="btnPNG" value="Export to PNG"/>
+		<div id="reader" style="width: 600; height: 600;"></div>
+		Value<input type="text" id="txtQRCode"/>
 	</body>
 </html>
